# anote

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  conanfile.txt  conanfile_new.txt  vcpkg.json
.github/workflows/: build-linux.yml  build-osx.yml  build-windows.yml
art/: Anote_icon.icns
cmake_modules/: version.cmake
include/: AComment.h  AParser.h  af_listparam.h  anoteconfig.h  anoteresults.h  listgenreport.h  main.h
install/: anote.desktop
install/linux/: create_desktop_file.sh
interface/: ANote.pjd
src/: AComment.cpp  AParser.cpp  af_listparam.cpp  anote.rc  anoteapp.cpp  anoteapp.h  anotecomment.cpp  anotecomment.h  anoteconfig.cpp  anoteframe.cpp  anoteframe.h  anoteresults.cpp  bitmap.cpp  bitmap.h  listgenreport.cpp  main.cpp  resource.rc  settings.cpp  settings.h  settingsdialog.cpp  settingsdialog.h
txt/: anote3.bmml  interface_code.graffle  prototypes_classes.graffle
txt/exemple_comment.oo3/: contents.xml
ui/: ui-design.fbp
